tests/NormalTests/paczka1/fuzzy1/96196945.err
Error in line 12: iB8Jf9P A47N 46,6
Error in line 15: togNJ3Vdg6J A707 96,3
Error in line 16: togNJ3Vdg6J A475 25,1
Error in line 10: Pf35do A475 50,1
Error in line 1: tDzFsi A475 20,2
Error in line 26: tDzFsi A340 73,4
Error in line 33: tDzFsi A475 55,8
Error in line 13: iB8Jf9P A475 5,6
